Reverse intervention computations

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1899,7 +1899,7 @@ eng:
         calf: "Calf"
         # cattle_herd: "Troupeau de bovins"
         # cereal_crop: "Culture de céréales"
-        # chemical_fertilizer: "Engrais chimique"
+        # chemical_fertilizer: "Engrais minéral"
         # complete_sower: "Semoir équipé"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
@@ -2236,7 +2236,7 @@ eng:
         # carmenere_noir: "Carménère noir"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
-        # chemical_fertilizer: "Engrais chimique"
+        # chemical_fertilizer: "Engrais minéral"
         # chesnut_red_soil: "Terres rouges à châtaigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
