--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -315,6 +315,7 @@ fra:
       new: "Ajout d’un nouvel encaissement"
       show: "Encaissement n°%{number} de %{entity}"
     backend/interventions:
+      # compute: "Compute backend/intervention"
       edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       index: "Interventions"
       new: "Nouvelle intervention"
