--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -86,7 +86,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -322,7 +322,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -558,7 +558,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1056,7 +1056,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1362,7 +1362,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1806,7 +1806,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2150,7 +2150,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2386,7 +2386,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2597,6 +2597,7 @@ fra:
         account_balance: "Balance de compte"
         activity: "Activité"
         affair: "Affaire"
+        analysis: "Analyse"
         analytic_distribution: "Répartition analytique"
         animal: "Animal"
         animal_group: "Groupe d’animaux"
@@ -2763,7 +2764,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2999,7 +3000,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3284,7 +3285,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3520,7 +3521,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3756,7 +3757,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3991,7 +3992,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4227,7 +4228,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4463,7 +4464,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4665,7 +4666,7 @@ fra:
         calf: "Veau"
         cattle_herd: "Troupeau de bovins"
         cereal_crop: "Culture de céréales"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         complete_sower: "Semoir équipé"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
@@ -4784,7 +4785,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5053,7 +5054,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5288,7 +5289,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5708,7 +5709,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
