--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1796,7 +1796,7 @@ arb:
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
         # cereal_crop: "Culture de céréales"
-        # chemical_fertilizer: "Engrais chimique"
+        # chemical_fertilizer: "Engrais minéral"
         # complete_sower: "Semoir équipé"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
@@ -2116,7 +2116,7 @@ arb:
         # carmenere_noir: "Carménère noir"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
-        # chemical_fertilizer: "Engrais chimique"
+        # chemical_fertilizer: "Engrais minéral"
         # chesnut_red_soil: "Terres rouges à châtaigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
